@@ -1,5 +1,6 @@
 == 0.9.2 / ???
 
+* Better error message for reduce() operator
 
 == 0.9.1 / 2012-04-10
 
